--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"yarn": "^1.6"
 	},
 	"scripts": {
-		"clean": "rimraf dist",
+		"clean": "rimraf dist build",
 		"touch": "mkdir -p dist && touch dist/biz-vue-server.min.js",
 		"prewatch": "run-s clean touch",
 		"watch": "NODE_ENV=development run-p watch:build watch:server",
@@ -40,6 +40,7 @@
 		"@types/mocha": "^5.2.5",
 		"@types/node": "8.10.26",
 		"@types/webpack": "^4.4.11",
+		"@types/webpack-bundle-analyzer": "^2.13.0",
 		"@types/webpack-merge": "^4.1.3",
 		"@types/webpack-node-externals": "^1.6.3",
 		"awesome-typescript-loader": "^5.2.1",
@@ -50,6 +51,7 @@
 		"ts-node": "^7.0.1",
 		"typescript": "^3.0.3",
 		"webpack": "^4.18.0",
+		"webpack-bundle-analyzer": "^3.0.2",
 		"webpack-cli": "^3.1.0",
 		"webpack-merge": "^4.1.4",
 		"webpack-node-externals": "^1.7.2",
