--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"mocha": "^5.2.0",
 		"nodemon": "^1.18.4",
 		"ts-node": "^7.0.1",
+		"tsconfig-paths-webpack-plugin": "^3.2.0",
 		"typescript": "^3.0.3",
 		"webpack": "^4.18.0",
 		"webpack-bundle-analyzer": "^3.0.2",
