--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"paths": {
-			"~*": ["*"]
+			"~*": ["src/main/ts/*"]
 		},
 		"sourceMap": true,
 		"strict": true,
