--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 	},
 	"devDependencies": {
 		"@types/chai": "^4.1.4",
-		"@types/chai-http": "^3.0.5",
 		"@types/express": "^4.16.0",
 		"@types/fs-extra": "^5.0.4",
 		"@types/lodash.merge": "^4.6.4",
@@ -43,8 +42,8 @@
 		"@types/webpack-node-externals": "^1.6.3",
 		"awesome-typescript-loader": "^5.2.1",
 		"chai": "^4.1.2",
-		"chai-http": "^4.2.0",
 		"mocha": "^5.2.0",
+		"node-mocks-http": "^1.7.0",
 		"nodemon": "^1.18.4",
 		"ts-node": "^7.0.1",
 		"tsconfig-paths-webpack-plugin": "^3.2.0",
