--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@types/lodash.merge": "^4.6.4",
 		"@types/mocha": "^5.2.5",
 		"@types/node": "8.10.26",
+		"@types/supertest": "^2.0.6",
 		"@types/webpack": "^4.4.11",
 		"@types/webpack-bundle-analyzer": "^2.13.0",
 		"@types/webpack-merge": "^4.1.3",
@@ -45,6 +46,7 @@
 		"mocha": "^5.2.0",
 		"node-mocks-http": "^1.7.0",
 		"nodemon": "^1.18.4",
+		"supertest": "^3.3.0",
 		"ts-node": "^7.0.1",
 		"tsconfig-paths-webpack-plugin": "^3.2.0",
 		"typescript": "^3.0.3",
