--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"express": "^4.16.3",
 		"fs-extra": "^7.0.0",
 		"lodash.merge": "^4.6.1",
+		"mongoose": "^5.2.15",
 		"reflect-metadata": "^0.1.12",
 		"typedi": "^0.8.0"
 	},
@@ -35,6 +36,7 @@
 		"@types/fs-extra": "^5.0.4",
 		"@types/lodash.merge": "^4.6.4",
 		"@types/mocha": "^5.2.5",
+		"@types/mongoose": "^5.2.16",
 		"@types/node": "8.10.26",
 		"@types/supertest": "^2.0.6",
 		"@types/webpack": "^4.4.11",
